# water-tank-bot-ws

./: .gitignore  README.md
install/: local_setup.sh  setup.sh
log/: latest_build  latest_list
src/: note.txt
src/example_2/doc/: Serial-com.xmind
src/example_2/hardware/: diffbot_system.cpp
src/example_2/log/: latest_list
src/ros2_control_demo_description/: CMakeLists.txt
src/ros2_control_demo_description/log/: latest_list
src/turtle_bot_sim_world/: CMakeLists.txt
src/turtle_bot_sim_world/launch/: turtle_bot_test_world.launch.py
src/turtle_bot_sim_world/log/: latest_list
src/turtle_bot_sim_world/worlds/: turtlebot_world.world
src/water_bot_task_navigator/: package.xml  setup.cfg  setup.py
src/water_bot_task_navigator/log/: latest_list
src/water_bot_task_navigator/water_bot_task_navigator/: water_bot_task_navigator.py
src/water_tank_cartographer/: CMakeLists.txt  package.xml
src/water_tank_cartographer/config/: cart_pure_locate.lua  cart_slam_2d.lua
src/water_tank_cartographer/launch/: cartographer_locate.launch.py  cartographer_map.launch.py
src/water_tank_cartographer/log/: latest_list
src/water_tank_navigation/: CMakeLists.txt  package.xml
src/water_tank_navigation/config/: nav.yaml  nav_world_time.yaml  test_config.yaml  turtlebot3.yaml
src/water_tank_navigation/launch/: navigation.launch.py  navigation_launch.launch.py
src/waypoints_generator/: package.xml  setup.cfg  setup.py
src/waypoints_generator/log/: latest_list
src/waypoints_generator/waypoints_generator/: path_lib.py  waypoints_generator.py
(+192 files in other folders)
